--- a/index.html
+++ b/index.html
@@ -24,26 +24,38 @@
                 <h2 class="timer__time"><span id="hours">00</span><span>:</span><span id="minutes">00</span><span>:</span><span id="seconds">00</span></h2>
             </div>
             <button class="timer__button">
-                Mint Now and Save!
+                <p class="hover">Mint Now and Save!</p>
             </button>
         </section>
         <section class="cards">
             <ul class="cards__container">
                <li class="cards__item">
-                   <img alt="Mint Card 1." src="./images/mint/1.jpg" class="cards__img"/>
-                   <button class="cards__button">Mint</button>
+                   <img alt="Mint Card 1." src="images/mint/4.jpg" class="cards__img"/>
+                   <button class="cards__button">
+                       <p>Mint</p>
+                       <img src="./images/arrow.svg" alt="Arrow icon.">
+                   </button>
                </li>
                 <li class="cards__item">
-                    <img alt="Mint Card 2." src="./images/mint/2.jpg" class="cards__img"/>
-                    <button class="cards__button">Mint</button>
+                    <img alt="Mint Card 2." src="images/mint/1.jpg" class="cards__img"/>
+                    <button class="cards__button">
+                        <p>Mint</p>
+                        <img src="./images/arrow.svg" alt="Arrow icon.">
+                    </button>
                 </li>
                 <li class="cards__item">
-                    <img alt="Mint Card 3." src="./images/mint/3.jpg" class="cards__img"/>
-                    <button class="cards__button">Mint</button>
+                    <img alt="Mint Card 3." src="images/mint/2.jpg" class="cards__img"/>
+                    <button class="cards__button">
+                        <p>Mint</p>
+                        <img src="./images/arrow.svg" alt="Arrow icon.">
+                    </button>
                 </li>
                 <li class="cards__item">
-                    <img alt="Mint Card 4." src="./images/mint/4.jpg" class="cards__img"/>
-                    <button class="cards__button">Mint</button>
+                    <img alt="Mint Card 4." src="images/mint/3.jpg" class="cards__img"/>
+                    <button class="cards__button">
+                        <p>Mint</p>
+                        <img src="./images/arrow.svg" alt="Arrow icon.">
+                    </button>
                 </li>
             </ul>
         </section>
