feat: add mobile and tablet layout

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                <li class="cards__item">
                    <img alt="Mint Card 1." src="images/mint/1.jpg" class="cards__img"/>
                    <button class="cards__button">
+                       <div></div>
                        <p>Mint</p>
                        <img src="./images/arrow.svg" alt="Arrow icon.">
                    </button>
@@ -39,6 +40,7 @@
                 <li class="cards__item">
                     <img alt="Mint Card 2." src="images/mint/2.jpg" class="cards__img"/>
                     <button class="cards__button">
+                        <div></div>
                         <p>Mint</p>
                         <img src="./images/arrow.svg" alt="Arrow icon.">
                     </button>
@@ -46,6 +48,7 @@
                 <li class="cards__item">
                     <img alt="Mint Card 3." src="images/mint/3.jpg" class="cards__img"/>
                     <button class="cards__button">
+                        <div></div>
                         <p>Mint</p>
                         <img src="./images/arrow.svg" alt="Arrow icon.">
                     </button>
@@ -53,6 +56,7 @@
                 <li class="cards__item">
                     <img alt="Mint Card 4." src="images/mint/4.jpg" class="cards__img"/>
                     <button class="cards__button">
+                        <div></div>
                         <p>Mint</p>
                         <img src="./images/arrow.svg" alt="Arrow icon.">
                     </button>
